# agent-delegation-network

./: .env.example  .gitignore  DEMO_VIDEO_SCRIPT.md  PHASES.md  PROVENANCE_v3.9.0.md  PROVENANCE_v3.9.1.md  PROVENANCE_v3.9.2.md  README.md  SESSION_STATE.md  SUBMISSION_REPORT.md  bugs_found.md  capture_run.py  demo_output.txt  final_proof.py  final_proof.txt  host_agent.py  install.ps1  install.sh  narrator.ps1  run_demo_direct.py  run_live.py  run_test.py  t3n_bridge_proof.txt  velvet_log.md
.github/: actions-lock.json
adn/: worker_executor.py
contract/: Cargo.toml
contract/src/: crypto.rs  lib.rs
contract/tests/: policy_fixture.json  vectors.json
contract/wit/: world.wit
data/: sales_Q1-2026_US_premium.csv
demo/: adn_demo.py  features_demo.py
js-contract/: contract.js
llm/: __init__.py  client.py
openrouter/: __init__.py  client.py
proof/: deployment_manifest_v3.9.2.local.json  live_run_2026-06-11.txt  live_run_session7_credit_blocked.txt  live_run_v3.5.0.txt  live_run_v3.6.0.txt  live_run_v3.6.0_session5.txt  live_run_v3.8.0_demo_video.txt  live_run_v3.8.0_session5.txt  live_run_v3.8.0_session6_final.txt  live_run_v3.8.0_session7_final.txt  live_run_v3.8.0_session8_newtoken.txt  live_run_v3.8.1_c01_proof.txt  live_run_v3.8.1_final_88b7b88.txt  live_run_v3.9.2_session9.txt
schemas/: adn-release-proof-v1.schema.json  t3n-invocation-evidence-v1.schema.json
scripts/: audit_legacy_imports.mjs  check_readme_claims.py  release_gate.py  validate_manifest.py  verify_release.py  verify_release_asset.py  verify_release_asset_remote.py  (+1 more)
(+97 files in other folders)
