[package]
name = "adn-processor"
version = "1.0.0"
edition = "2021"

[lib]
# cdylib emits the WASM component; lib keeps native testability
crate-type = ["cdylib", "lib"]

[dependencies]
wit-bindgen = "0.24"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
base64 = "0.22"

[profile.release]
# Minimize WASM artifact size
opt-level = "s"
lto = true
codegen-units = 1
panic = "abort"
strip = true
