[package]
name = "adn-processor"
version = "3.9.0"
edition = "2021"

[lib]
# cdylib emits the WASM component; lib keeps native testability
crate-type = ["cdylib", "lib"]

[dependencies]
wit-bindgen = "0.24"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
base64 = "0.22"
sha2 = { version = "0.10", default-features = false }
sha3 = { version = "0.10", default-features = false }
k256 = { version = "0.13", default-features = false, features = ["ecdsa", "arithmetic", "std"] }

[profile.release]
# Minimize WASM artifact size
opt-level = "s"
lto = true
codegen-units = 1
panic = "abort"
strip = true